# scrapbook

./: .gitignore  README.md  dev_logger.py  improvements.md  pyproject.toml  scrapbook-cli.py  scrapbook.py  track.py
config/: scrapbook_config.yaml
src/scrapbook/: main.py
